--- a/Reactjsts34k/tskk/firebaseproject/src/components/Home/Home.module.css
+++ b/Reactjsts34k/tskk/firebaseproject/src/components/Home/Home.module.css
@@ -2,7 +2,7 @@
     display: flex;
     width:100%;
     flex-direction: column;
-    
+    background: linear-gradient(to right,#ea6c23,#aaaa23);
     min-height: 100vh;
     justify-content: center;
     align-items: center;
